Bug 437332 - We should default to yahoo for any new securities
Summary: We should default to yahoo for any new securities
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.1.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-18 23:59 UTC by Dawid Wróbel
Modified: 2021-06-13 06:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2021-05-18 23:59:24 UTC
SUMMARY

When importing a statement with new securities, they get created with Stooq source configured by default, which most of the cases will not work due proprietary symbol prefixes/suffixes which Stooq uses (e.g. AMD is AMD.US)

We should default to Yahoo Finance instead, now that it's been stable for over a year. We may also default to Yahoo Finance for any new currencies added. This may actually be necessary  if there's no distinction in code between the type of security at the time it gets created – and from a quick glimpse at the code, it seems to be the case.

STEPS TO REPRODUCE
1. Import a statement with new, previously unknown securities

OBSERVED RESULT
1. Notice that Stooq is selected as a default source for online quotes
2. Notice that Stooq will most likely *not* work with the imported security's vanilla symbol.


EXPECTED RESULT
1. KMM should default to Yahoo Finance, increasing the chances that the online quotes would work out of the box for any new security.
Comment 1 Dawid Wróbel 2021-06-13 06:56:59 UTC
Git commit d3f7eef2030b524f8e8258ccddb4cbb4722099fb by Dawid Wróbel.
Committed on 13/06/2021 at 06:56.
Pushed by wrobelda into branch '5.1'.

Make Yahoo default quote source for new securities
FIXED-IN: 5.1.2

M  +1    -1    kmymoney/converter/mymoneystatementreader.cpp

https://invent.kde.org/office/kmymoney/commit/d3f7eef2030b524f8e8258ccddb4cbb4722099fb
Comment 2 Dawid Wróbel 2021-06-13 06:57:55 UTC
Git commit 4091fff43905cf463b48211a898e5d49585cd6ee by Dawid Wrobel, on behalf of Dawid Wróbel.
Committed on 13/06/2021 at 06:57.
Pushed by wrobelda into branch 'master'.

Make Yahoo default quote source for new securities
FIXED-IN: 5.1.2


(cherry picked from commit d3f7eef2030b524f8e8258ccddb4cbb4722099fb)

M  +1    -1    kmymoney/converter/mymoneystatementreader.cpp

https://invent.kde.org/office/kmymoney/commit/4091fff43905cf463b48211a898e5d49585cd6ee