Make Yahoo default quote source for new securities

BUG: 437332
FIXED-IN: 5.1.2